<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="15dp">

    <!-- Header -->
    <TextView
        android:id="@+id/popup_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/thales_blue"
        android:padding="10dp"
        android:text="@string/confirmation"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Content -->
    <TextView
        android:id="@+id/popup_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/audit_confirmation"
        android:textAlignment="center"
        android:textSize="14sp" />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/thales_blue"
        android:padding="10dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@color/thales_blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="8dp"
            android:text="@string/confirm"
            android:textColor="@color/thales_blue"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>