<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="15dp">

    <!-- Header -->
    <TextView
        android:id="@+id/popup_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:padding="10dp"
        android:text="@string/target_detected"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Photo Container -->
    <FrameLayout
        android:id="@+id/photo_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/photo"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </FrameLayout>

    <!-- Close Button -->
    <Button
        android:id="@+id/close_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0000"
        android:padding="10dp"
        android:text="@string/close"
        android:textColor="#FFFFFFFF"
        android:textSize="14sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>